--- a/NLP_ConvTutorial.ipynb
+++ b/NLP_ConvTutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,42 +13,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ref. V. Dumoulin and F. Visin, <i>A guide to convolution arithmetic for deep learning</i> <b>2016</b>. doi: 10.48550/ARXIV.1603.07285."
+    "Convolutional Neural Networks (CNN) use the convolutional layer to extract features given an input. The output shape of the convolution is affected by the shape of the kernel, whether zero padding and strides is applied. This short tutorial illustrates such issues via pytorch examples.\n",
+    "\n",
+    "**See**. V. Dumoulin and F. Visin, <i>A guide to convolution arithmetic for deep learning</i> <b>2016</b>. doi: 10.48550/ARXIV.1603.07285."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Parameter containing:\n",
-       "tensor([[ 0.5619, -0.7912, -1.9860,  0.4270, -1.6669],\n",
-       "        [-0.7633, -1.2504,  0.8393, -0.4949,  0.1892],\n",
-       "        [-0.8731, -0.7966, -0.5558,  0.1839, -1.2145],\n",
-       "        [-0.4237,  0.2841,  1.3995, -0.6623,  0.8048],\n",
-       "        [-0.5552, -0.9208, -1.4534, -0.8995,  0.8469],\n",
-       "        [-0.3159, -0.7477, -1.0075,  0.0575, -0.3975],\n",
-       "        [-0.9175,  0.3233, -0.8610,  1.1140,  2.1137],\n",
-       "        [ 0.9275, -0.4747, -0.2126,  0.8270, -0.5752],\n",
-       "        [ 0.6023,  0.4754, -0.6525,  0.5913,  1.3907],\n",
+       "tensor([[ 0.2813, -0.7602,  0.4495,  1.2502, -0.9426],\n",
+       "        [ 0.0784, -1.4935, -0.2362, -0.3786,  0.9867],\n",
+       "        [-0.0498, -0.3142,  0.1057,  0.2097,  0.9843],\n",
+       "        [-0.6823, -0.4586, -0.1509,  0.4517, -0.6122],\n",
+       "        [ 0.7627,  0.1686, -0.9021,  0.4643, -0.2864],\n",
+       "        [-0.2242, -2.1846, -0.7038, -0.1789, -0.2455],\n",
+       "        [-0.4982, -1.6962,  1.6620, -0.2756,  0.9716],\n",
+       "        [ 1.0995,  1.8333, -0.3567,  0.6955, -0.5738],\n",
+       "        [-0.2587,  0.2063, -0.6878, -0.7413,  1.2303],\n",
        "        [ 0.0000,  0.0000,  0.0000,  0.0000,  0.0000]], requires_grad=True)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Generación de un indice invertido. Cada línea en el indice representa\n",
-    "# una palabra (vector semantico)\n",
+    "# First let’s create a fixed size inverted index. Each line corresponds to a words embedding\n",
     "# \n",
-    "# La variable padding_idx es reservada como comodin para el caso de \n",
-    "# que esta sea utilizada como relleno.\n",
+    "# padding_idx is a reserved word that is used as wildcard when an unknown word occurs in text.\n",
     "embedding = torch.nn.Embedding(10, 5, padding_idx=9)\n",
+    "embedding.weight"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Parameter containing:\n",
+       "tensor([[ 1.,  1.,  1.,  1.,  1.],\n",
+       "        [ 2.,  2.,  2.,  2.,  2.],\n",
+       "        [ 3.,  3.,  3.,  3.,  3.],\n",
+       "        [ 4.,  4.,  4.,  4.,  4.],\n",
+       "        [ 5.,  5.,  5.,  5.,  5.],\n",
+       "        [ 6.,  6.,  6.,  6.,  6.],\n",
+       "        [ 7.,  7.,  7.,  7.,  7.],\n",
+       "        [ 8.,  8.,  8.,  8.,  8.],\n",
+       "        [ 9.,  9.,  9.,  9.,  9.],\n",
+       "        [10., 10., 10., 10., 10.]], grad_fn=<CopySlices>)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# For debuggin purposes lets ,make \n",
+    "for i in range(1,11):\n",
+    "    embedding.weight[i-1,:] = i\n",
     "embedding.weight"
    ]
   },
@@ -56,38 +89,82 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Ejemplo de un tensor 1D**"
+    "**1D Convolution**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[2., 3., 4.],\n",
+      "        [2., 3., 4.],\n",
+      "        [2., 3., 4.],\n",
+      "        [2., 3., 4.],\n",
+      "        [2., 3., 4.]], grad_fn=<TransposeBackward0>)\n",
+      "torch.Size([5, 3])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assume a sequence of words labeled as integers, i.e. [1,2,3]. The invertex\n",
+    "# index is used transform each integer to its vector form\n",
+    "_1DT = embedding(torch.tensor([1, 2, 3]))\n",
+    "\n",
+    "# Estimate the transpose\n",
+    "_1DT = torch.transpose(embedding(torch.tensor([1, 2, 3])),0,1)\n",
+    "print(_1DT)\n",
+    "\n",
+    "# The tensor shape\n",
+    "print(_1DT.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.7633, -0.8731, -0.4237],\n",
-       "        [-1.2504, -0.7966,  0.2841],\n",
-       "        [ 0.8393, -0.5558,  1.3995],\n",
-       "        [-0.4949,  0.1839, -0.6623],\n",
-       "        [ 0.1892, -1.2145,  0.8048]], grad_fn=<TransposeBackward0>)"
+       "tensor([[[25., 35.]]], grad_fn=<SqueezeBackward1>)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Suponga una secuencia de palabras donde cada palabra es reemplazada por un \n",
-    "# índice entero. Sea [1,2,3] tal secuencia. Cada índice de la secuencia es \n",
-    "# transformado a su equivalente vectorial. \n",
-    "sequence = embedding(torch.tensor([1, 2, 3]))\n",
+    "# 1-D Zero padding, unit stride (on one dimension), 1 input/output channel\n",
+    "# The convolution output is defined as o = ( i - k ) + 1\n",
     "\n",
-    "# Aplicación de la transpuesta a la secuencia\n",
-    "sequence = torch.transpose(embedding(torch.tensor([1, 2, 3])),0,1)\n",
-    "sequence"
+    "# let i be the text length\n",
+    "# Let d be the number of input channels. In our case, it corresponds to the embedding dimension.\n",
+    "# Let r be the number of output channels. For each channel a kernel of size h is created. Each with different coefficients\n",
+    "# Let h be the size of the kernel.\n",
+    "# Let s be the stride.\n",
+    "\n",
+    "q = _1DT.shape[0]\n",
+    "r = 1\n",
+    "h = 2\n",
+    "s = 1\n",
+    "\n",
+    "conv = torch.nn.Conv1d(in_channels=q, out_channels=r, kernel_size=h, stride=s,  bias=False)\n",
+    "\n",
+    "# To make the convolution effect more visual. Bias terms are disabled from Conv1d and weight \n",
+    "# coeficients are made 1 as follows\n",
+    "with torch.no_grad():\n",
+    "    conv.weight[:,:,:] = 1.\n",
+    "\n",
+    "# \n",
+    "conv(_1DT.unsqueeze(0))\n",
+    "    \n",
+    "# Shure enough the convolution produced the expected output"
    ]
   },
   {
@@ -108,10 +185,18 @@
     }
    ],
    "source": [
-    "# 1-D tensor + convolución\n",
+    "# 1-D convolution\n",
+    "# in_channels (d), correspon to the embedding dimension.\n",
+    "# out_channels (r), the number of kernels that are applied.\n",
+    "# kernel_size (h)\n",
+    "# stride (s)\n",
     "\n",
-    "T_1D = torch.tensor([1, 2, 3, 4, 5, 6], dtype = torch.float)\n",
-    "print(T_1D.shape)\n",
+    "\n",
+    "conv = torch.nn.Conv1d(in_channels=5, out_channels=1, kernel_size=2, stride=1,  bias=False)\n",
+    "\n",
+    "\n",
+    "#T_1D = torch.tensor([1, 2, 3, 4, 5, 6], dtype = torch.float)\n",
+    "#print(T_1D.shape)\n",
     "\n",
     "# El tensor debe ser transformado a una matriz donde:\n",
     "# - la primera columna corresponda al número de canales de entrada\n",
