--- a/NLP_ConvTutorial.ipynb
+++ b/NLP_ConvTutorial.ipynb
@@ -348,7 +348,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (nlp)",
+   "display_name": "Python 3 nlp",
    "language": "python",
    "name": "nlp"
   },
@@ -362,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
